# g3h

./: init-frontend.sh
.claude/skills/vite-frontend-dev/: SKILL.md
backend/: .env.example  .gitignore  README.md  ai_assistant.py  constants.py  image_generator.py  main.py  output.txt  output_sweep.txt  pyproject.toml  ref.md  reproduce_issue.py  test_watermark_script.py  watermark.py
backend/tests/: test_watermark.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/screens/: CreationScreen.tsx  DetectionScreen.tsx
frontend/src/services/: api.ts
